--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-  border: solid 4px red; 
+  /* border: solid 4px red;  */
   padding: 20px;
   background-color: darkgray;
   margin-bottom: 30px;
@@ -7,13 +7,13 @@ header {
 
 .headerTitle {
   text-align: left;
-  border: solid 4px green; 
+  /* border: solid 4px green;  */
 
 }
 
 .Nav {
   text-align: left;
   margin-top: 20px;
-  border: solid 4px orange; 
+  /* border: solid 4px orange;  */
 
 }
