--- a/src/components/Products/productCard.css
+++ b/src/components/Products/productCard.css
@@ -1,5 +1,5 @@
 .productCard {
-  border: solid 4px blue;
+  /* border: solid 4px blue; */
   width:fit-content;
   margin: 10px;
   list-style-type: none;
