--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,6 @@
 .navItem {
-  border: solid red 2px;
-  background-color: darkcyan;
+  /* border: solid red 2px; */
+  background-color: rgb(184, 224, 240);
   padding: 10px;
   margin-right: 10px;
   margin-bottom: 200px;
@@ -17,8 +17,9 @@
 
 .cart {
   /* text-align: right; */
-  border: solid pink 2px;
+  border: solid rgb(0, 0, 0) 2px;
   width: 100px;
   float: right;
+  padding: 5px;
 
 }
